# ai-practice

./: analogClock.ipynb  basic-opencv.ipynb  extract_image.py  numpy-test.ipynb  opencv-test.ipynb  pyproject.toml
