[tool.poetry]
name = "practice"
version = "0.1.0"
description = ""
authors = ["samiulalimsaad <saadnbiuraj@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
opencv-python = "^4.5.5"
numpy = "^1.22.1"
matplotlib = "^3.5.1"
jupyterlab = "^3.2.8"
tensorflow = "^2.7.0"
pandas = "^1.4.0"
sklearn = "^0.0"
caer = "^2.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
